--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-  "start": "tsx server.ts",
-  "start:3000": "cross-env PORT=3000 tsx server.ts",
-  "start:3001": "cross-env PORT=3001 tsx server.ts",
+    "start": "tsx server.ts",
+    "start:3000": "cross-env PORT=3000 tsx server.ts",
+    "start:3001": "cross-env PORT=3001 tsx server.ts",
     "start:cjs": "node server.cjs",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/express": "^5.0.3",
     "@types/node": "^22.0.0",
-  "cross-env": "^7.0.3",
+    "cross-env": "^7.0.3",
     "tsx": "^4.19.0",
     "typescript": "~5.8.3",
     "vite": "^7.1.2"
