--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@types/express": "^5.0.3",
     "@types/node": "^22.0.0",
     "cross-env": "^7.0.3",
-    "prettier": "3.6.2",
+    "prettier": "^3.6.2",
     "tsx": "^4.19.0",
     "typescript": "~5.8.3",
     "vite": "^7.1.2"
