--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "vite": "^7.1.2"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.17",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "tailwindcss": "^4.1.17",
     "ws": "^8.18.3"
   }
 }
